Fix BreakingContext::rewindToMidWordBreak to set m_currentCharacterIsSpace

This patch fixes BreakingContext::rewindToMidWordBreak to set
m_currentCharacterIsSpace correctly when it rewinded m_current.

Not doing so sets previousCharacterIsSpace incorrectly, and can
collapse whitespaces that should not be collapsed.

BUG=639781

Review-Url: https://codereview.chromium.org/2334143002
Cr-Commit-Position: refs/heads/master@{#418776}

Former-commit-id: d5bcb937b6dd019905eb7bbd9834b1eb26213f2a